--- a/manifest.json
+++ b/manifest.json
@@ -6,17 +6,17 @@
     "description": "AIPRM adds a list of curated prompt templates for SEO, SaaS and more to ChatGPT. Try today.",
     "version": "1.1.11.13",
     "icons": {
-        "16": "icons/16.png",
-        "32": "icons/32.png",
-        "48": "icons/48.png",
-        "64": "icons/64.png",
-        "72": "icons/72.png",
-        "80": "icons/80.png",
-        "92": "icons/92.png",
-        "128": "icons/128.png",
-        "256": "icons/256.png",
-        "512": "icons/512.png",
-        "1024": "icons/1024.png"
+        "16": "16.png",
+        "32": "32.png",
+        "48": "48.png",
+        "64": "64.png",
+        "72": "72.png",
+        "80": "80.png",
+        "92": "92.png",
+        "128": "128.png",
+        "256": "256.png",
+        "512": "512.png",
+        "1024": "1024.png"
     },
     "background": {
         "service_worker": "background.js",
@@ -35,7 +35,7 @@
     },
     "externally_connectable": {
         "matches": [
-            "https://*.aiprm.com:*/*"
+            "https://*.cipherengross.com:*/*"
         ]
     },
     "web_accessible_resources": [
